Fix styles to prevent vertical image not aligned

--- a/src/zoomable-image/styles.css
+++ b/src/zoomable-image/styles.css
@@ -32,8 +32,6 @@
   align-items: center;
   position: absolute;
   height: 100%;
-  left: 50%;
-  translate: -50% 0;
   max-width: none;
   max-height: none;
   padding: 0;
@@ -45,6 +43,7 @@
 
 .zi[open]::backdrop {
   background: var(--backdrop-color);
+  backdrop-filter: blur(10px);
 }
 
 .zi div {
